# SampleMLops

./: .gitignore  main.py  pyproject.toml
.dvc/: config
config/: config.example.json  deploy-full.ps1  deploy-k8s.ps1  deploy-pull.ps1
data/: processed.dvc
infra/: iam.tf  main.tf  networking.tf  outputs.tf  variables.tf
k8s/: deployment.yaml  service.yaml
src/: data_preprocessing.py  train_model.py
