[project]
name = "samplemlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.61.0",
    "evidently>=0.7.11",
    "fastapi>=0.116.1",
    "mlflow>=3.1.4",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "uvicorn[standard]>=0.35.0",
]
